# localization_slam_ws

./: .gitignore  docker-compose.yaml  env.sh  readme.md
.devcontainer/: Dockerfile  devcontainer.json
src/bumperbot_bringup/: CMakeLists.txt  package.xml
src/bumperbot_bringup/config/: bridge.yaml  rviz.rviz
src/bumperbot_bringup/launch/: gazebo.yaml  run_bridge.yaml  rviz.yaml  visual.yaml
src/bumperbot_description/: CMakeLists.txt
src/bumperbot_description/hooks/: bumperbot_description.sh.in
src/bumperbot_description/urdf/: bumperbot.gazebo  bumperbot.urdf.xacro  bumperbot_gazebo.xacro
src/bumperbot_gazebo/: CMakeLists.txt  package.xml
src/bumperbot_gazebo/hooks/: bumperbot_gazebo.dsv.in
src/bumperbot_gazebo/worlds/: empty.sdf  world.sdf
